# v-diffusion-jax

./: .gitignore  controlled_sampling.py  download_coco.py  environment.yml  pyproject.toml  requirements.txt  sample.py  setup.py  setup_tpu.sh  tpu_install.sh  train.py  train_clip.py  train_clip_latent.py
diffusion/: chunk_attention.py  clip_tokenizer.py  cloud_storage.py  dynamics_env.py  sampling.py  train.py  train_opt.py  training.py  utils.py
diffusion/models/: clip_latent.py  models.py  policy.py  wikiart_256.py
tests/: test_model.py
