[tool.poetry]
name = "v-diffusion-jax"
version = "0.1.0"
description = "Denoising Diffusion (Guided by CLIP) in Jax"
authors = ["Katherine Crowson <crowsonkb@gmail.com>, John David Pressman <jd@jdpressman.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
Pillow = "^8.4.0"
jax = "^0.2.24"
jaxlib = "^0.1.73"
torch = "^1.10.0"
torchvision = "^0.11.1"
einops = "^0.3.2"
numpy = "^1.21.4"
optax = "^0.0.9"
ftfy = "^6.0.3"
CLIP_JAX = {path = "./CLIP_JAX/"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
